# multicommit

./: .gitignore  pyproject.toml  readme.md
multicommit/: __init__.py
